# cmpe-275-miniproject-1

./: 275 Tri-code communication.pptx  README.md
cpp-src/basic/src/: CMakeLists.txt
cpp-src/basic/src/apps/: ClientApp.cpp  ServerApp.cpp
cpp-src/basic/src/payload/: basicbuilder.cpp
cpp-src/basic/src/socket/: client.cpp  client.hpp  server.cpp  server.hpp  sessionhandler.cpp
java-src/basic/: client.sh
java-src/basic/src/gash/app/: ClientApp.java  ServerApp.java
java-src/basic/src/gash/payload/: BasicBuilder.java
java-src/basic/src/gash/socket/: BasicClient.java  BasicServer.java  SessionHandler.java
python-src/basic/payload/: builder.py
python-src/basic/socket/: client.py  server.py
python-src/basic/tests/: testBuilder.py
